# SmartDoorLock-IoT

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  ble_s3_server.c  ble_s3_server.h  ble_server.c  main.c  tcp_server.c  tcp_server_handler.c
main/utils/: PKCS7.c  aes_util.c  aes_util.h  authorization.c  authorization.h  base64.c  database_util.c  database_util.h  esp_touch_util.c  esp_touch_util.h  hmac_util.c  hmac_util.h  lock_status.c  lock_status.h  nonce.c  nonce.h  nvs_util.c  nvs_util.h  old_Server.c  power_util.c  power_util.h  pushingbox_util.c  rsa_util.c  rsa_util.h  sha256_util.c  time_util.c  time_util.h  user_info.c  user_info.h  utils.c  utils.h  wifi_connect_util.c  wifi_connect_util.h
spiffs_image/: certificate.crt  private.key
